@@ -1,3 +1,8 @@
+2007-03-26    <tino@firebird.03.softkill.net>
+
+	* dbm.c (db_cmp): bugfix: data_alloc could be set, such that
+	free() creates a signal
+
 2007-02-12    <tino@firebird.03.softkill.net>
 
 	* test.sh: improved tests
